--- a/frontend/src/_includes/service-item.njk
+++ b/frontend/src/_includes/service-item.njk
@@ -1,4 +1,4 @@
-<li class="service-card">
+<li class="service-item">
     <h3 class="service-title">{{service.title}}</h3>
     <div class="info-icon">
         <img src="./images/information-circle-outline.svg" alt="">
