--- a/frontend/src/scss/components/_index.scss
+++ b/frontend/src/scss/components/_index.scss
@@ -1,3 +1,4 @@
-@forward "service-card";
+@forward "service-item";
 @forward "shopping-cart-modal";
 @forward "service-library-card";
+@forward "template-modal";
