--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -33,6 +33,9 @@
 }
 
 body {
+  .content {
+    position: relative;
+  }
   @include mq(medium) {
     display: flex;
     flex-direction: row-reverse;
