--- a/frontend/src/_includes/shopping-cart-modal.njk
+++ b/frontend/src/_includes/shopping-cart-modal.njk
@@ -1,5 +1,6 @@
-<div id="shopping-cart-modal">
+<div id="shopping-cart-modal" class="hidden">
     <ul id="shopping-list" class="service-item-wrapper">
-
     </ul>
+        <button id="clear-all" class="hidden">Clear All</button>
+
 </div>
