--- a/frontend/src/index.njk
+++ b/frontend/src/index.njk
@@ -9,7 +9,6 @@ layout: base.njk
     {%- endif -%}
 {%- endfor -%} #}
 <div class="container">
-<a href="/services-library/">Services</a>
 
 <div id="process-wrapper">
     <h1>Discover</h1>
@@ -54,6 +53,9 @@ layout: base.njk
         {%- endfor -%}
     </ul>
     </div>
+
+    <button href="/services-library/" id="template-btn">Templates</button>
+
 </div>
 
 {# <h1>Discover</h1>
