--- a/frontend/src/scss/components/_shopping-cart-modal.scss
+++ b/frontend/src/scss/components/_shopping-cart-modal.scss
@@ -3,6 +3,13 @@
 
 #shopping-cart-modal {
   background-color: gray;
+  padding: 2em;
+  .service-item-wrapper {
+    flex-direction: column;
+    .service-item {
+      width: 100%;
+    }
+  }
   @include mq(medium) {
     width: 500px;
     height: auto;
