checkout functionality updated

--- a/frontend/src/scss/components/_service-item.scss
+++ b/frontend/src/scss/components/_service-item.scss
@@ -4,7 +4,7 @@
 .service-item-wrapper {
   display: flex;
   flex-direction: column;
-  .service-item {
+  .service-item-original {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
