--- a/frontend/src/_includes/nav.njk
+++ b/frontend/src/_includes/nav.njk
@@ -1,4 +1,4 @@
 <nav>
 <a class = "nav-link" href="/services-library">Service Library</a>
-    <a class = "nav-link" href="/">New Plan</a>
+    <a class = "nav-link" href="/project-builder">New Plan</a>
 </nav>
