--- a/frontend/src/scss/components/_service-item.scss
+++ b/frontend/src/scss/components/_service-item.scss
@@ -1,11 +1,18 @@
 @use "../abstracts/mixins" as *;
 @use "../abstracts/type-scale" as *;
 
+#process-wrapper {
+  h1 {
+    margin-top: 1em;
+  }
+}
+
 .service-item-wrapper {
   display: flex;
   flex-direction: column;
   .service-item-original {
     display: flex;
+    position: relative;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -17,26 +24,58 @@
       // margin-right: 1em;
       word-wrap: none;
     }
+    .description-span {
+      display: none;
+      width: 400px;
+      padding: 1em;
+      border: 2px var(--clr-neutral-700) solid;
+      border-radius: 0.5em;
+      background-color: var(--clr-neutral-100);
+      z-index: 1;
+      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+      p {
+        font-size: var(--fs-300);
+        color: var(--clr-neutral-700);
+      }
+    }
+    .info-icon:hover .description-span {
+      display: block;
+      position: absolute;
+      overflow: hidden;
+    }
+
     @include mq(medium) {
       flex-grow: 1;
       flex-shrink: 1;
-      margin: 0.25em;
+      margin: 0.25em 0.25em 0.5em 0.25em;
       padding: 0.5em;
       max-width: 366px;
+      min-width: 300px;
+
       &:hover {
+        border: 3px var(--clr-accent-orange) solid;
         background-color: var(--clr-accent-orange);
+        color: var(--clr-neutral-100);
         cursor: pointer;
+        svg {
+          fill: var(--clr-neutral-100);
+        }
       }
     }
     .info-icon {
-      min-width: 1.5em;
-      max-width: 1.5em;
+      width: 1.5em;
+      height: 1.5em;
       margin-left: 1em;
     }
   }
   .active-service-item {
+    border: 3px var(--clr-accent-orange) solid;
     background-color: var(--clr-accent-orange);
+    color: var(--clr-neutral-100);
     cursor: pointer;
+    svg {
+      fill: var(--clr-neutral-100);
+    }
   }
   @include mq(medium) {
     flex-direction: row;
